tests/lean/t5.lean.expected.out
t5.lean:4:11:failed to generate bytecode for 'g'
code generation failed, VM does not have code for 'f'
g : N → N
t5.lean:7:13:failed to generate bytecode for 'foo.h'
code generation failed, VM does not have code for 'f'
h : N
t5.lean:9:21:failed to generate bytecode for 'private.106392691.q'
code generation failed, VM does not have code for 'f'
q : N
foo.h : N
t5.lean:13:6: error: unknown identifier 'q'
